unpackaged/objects/Item_Attachment__c.object
<CustomObject>
  <description>SBU: PREP &amp; ORTHO; Country: Japan - Used to store Attachments linked to an Item. Limitations in the standard way of attach documents require this object.</description>
  <fields>
    <fullName>File_Description__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
    <label>File Description</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>File_Type__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
    <label>File Type</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Document</fullName>
        </value>
        <value>
          <fullName>Academic Information</fullName>
        </value>
        <value>
          <fullName>Others</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
    <label>Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Item Attachments</relationshipLabel>
    <relationshipName>Item_Attachments</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Legacy_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The old ID from the current CRM system</description>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>NonERPProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non-ERP Product</label>
    <referenceTo>Non_ERP_Products__c</referenceTo>
    <relationshipLabel>Item Attachments</relationshipLabel>
    <relationshipName>Item_Attachments</relationshipName>
    <type>Lookup</type>
  </fields>
  <label>Item Attachment</label>
  <nameField>
    <label>Item Attachments Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Item Attachments</pluralLabel>
  <sharingModel>Read</sharingModel>
</CustomObject>